--- a/servidor_minecraft/plugins/CraftEnhance/recipes.yml
+++ b/servidor_minecraft/plugins/CraftEnhance/recipes.yml
@@ -20,3 +20,18 @@ recipe1:
   result_slot: 9
   category: null
   shapeless: false
+recipe2:
+  ==: com.dutchjelly.craftenhance.crafthandling.recipes.FurnaceRecipe
+  result: DEDSAFIO3_METALRECOCIDO
+  duration: 160
+  oncraftcommand: null
+  hidden: false
+  matchtype: MATCH_META
+  recipe:
+  - IRON_INGOT
+  permission: null
+  page: -1
+  slot: -1
+  result_slot: 1
+  category: null
+  exp: 0.0
