--- a/servidor_minecraft/plugins/CraftEnhance/server-recipes.yml
+++ b/servidor_minecraft/plugins/CraftEnhance/server-recipes.yml
@@ -7,5 +7,241 @@ disabled:
 - securitycraft:trophy_system
 - cataclysm:bone_reptile_chestplate
 - cataclysm:meat_shredder
-- minecraft:purpur_pillar_from_purpur_block_stonecutting
-- securitycraft:reinforced_weathered_cut_copper_slab_from_reinforced_weathered_cut_copper_stonecutting
+- cataclysm:blasting/black_steel_nugget_from_blasting
+- cataclysm:blasting/ancient_metal_nugget_from_blasting
+- casinocraft:rulebook_5_2
+- securitycraft:furnace_mine
+- casinocraft:rulebook_5_1
+- securitycraft:red_lens
+- casinocraft:cardtable_wide_magenta
+- casinocraft:arcade_slot_orange
+- casinocraft:arcade_slot_yellow
+- casinocraft:arcade_base_cyan
+- dedsafio3:repelente
+- casinocraft:cardtable_wide_yellow
+- securitycraft:speed_module
+- securitycraft:quartz_mine
+- dedsafio3:jeringa_nereida_craft
+- dedsafio3:reaper_craft
+- securitycraft:cobbled_deepslate_mine
+- dedsafio3:bala_recope
+- securitycraft:keycard_lock
+- casinocraft:cardtable_base_magenta
+- securitycraft:bouncing_betty
+- casinocraft:arcade_slot_white
+- securitycraft:gravel_mine
+- securitycraft:deepslate_copper_mine
+- securitycraft:deepslate_diamond_mine
+- casinocraft:rulebook_1_1
+- casinocraft:arcade_base_light_gray
+- cataclysm:cursed_bow
+- casinocraft:arcade_slot_lime
+- casinocraft:cardtable_base_lime
+- securitycraft:mine
+- casinocraft:cardtable_wide_light_blue
+- casinocraft:cardtable_base_blue
+- casinocraft:cardtable_wide_orange
+- casinocraft:arcade_slot_blue
+- securitycraft:netherrack_mine
+- dedsafio3:pantalon_i
+- casinocraft:cardtable_wide_green
+- securitycraft:acacia_security_sea_boat
+- dedsafio3:mejora_dilitio
+- dedsafio3:espadafantasmal
+- dedsafio3:motor_recipe
+- casinocraft:arcade_slot_green
+- securitycraft:sand_mine
+- cataclysm:black_steel_pickaxe
+- cataclysm:abyss_eye
+- securitycraft:sentry
+- securitycraft:deepslate_emerald_mine
+- cataclysm:burning_ashes
+- casinocraft:rulebook_4_1
+- casinocraft:cardtable_wide_black
+- casinocraft:rulebook_4_2
+- casinocraft:arcade_slot_purple
+- cataclysm:the_annihilator
+- casinocraft:arcade_base_red
+- securitycraft:rift_stabilizer
+- securitycraft:portable_radar
+- casinocraft:arcade_slot_pink
+- casinocraft:cardtable_wide_pink
+- securitycraft:iron_mine
+- casinocraft:arcade_slot_black
+- securitycraft:emerald_mine
+- casinocraft:cardtable_base_gray
+- casinocraft:cardtable_wide_blue
+- cataclysm:blazing_grips
+- cataclysm:abyssal_sacrifice
+- casinocraft:arcade_slot_cyan
+- securitycraft:sonic_security_system
+- securitycraft:protecto
+- dedsafio3:overworld_extractor_recipe
+- casinocraft:arcade_base_pink
+- dedsafio3:corazon_dorado_recipe
+- casinocraft:cardtable_wide_brown
+- securitycraft:remote_access_sentry
+- cataclysm:ancient_spear
+- cataclysm:the_incinerator
+- cataclysm:bone_reptile_helmet
+- cataclysm:black_steel_shovel
+- casinocraft:arcade_base_white
+- casinocraft:arcade_slot_red
+- casinocraft:arcade_base_blue
+- casinocraft:cardtable_wide_cyan
+- securitycraft:ancient_debris_mine
+- cataclysm:void_eye
+- cataclysm:black_steel_hoe
+- cataclysm:witherite_ingot
+- dedsafio3:botas_i
+- casinocraft:arcade_base_lime
+- securitycraft:deepslate_iron_mine
+- securitycraft:codebreaker
+- cataclysm:flame_eye
+- cataclysm:witherite_block
+- cataclysm:crystallized_coral
+- cataclysm:ancient_metal_nugget
+- casinocraft:cardtable_base_black
+- casinocraft:arcade_base_yellow
+- dedsafio3:bloqueador
+- securitycraft:nether_gold_mine
+- cataclysm:black_steel_axe
+- cataclysm:soul_render
+- casinocraft:cardtable_base_green
+- casinocraft:rulebook_3_3
+- casinocraft:rulebook_3_2
+- casinocraft:rulebook_3_1
+- cataclysm:black_steel_ingot_from_nuggets
+- casinocraft:arcade_base_light_blue
+- casinocraft:cardtable_base_orange
+- cataclysm:cursium_upgrade_smithing_template
+- dedsafio3:protector_a
+- dedsafio3:cuchara_recipe
+- casinocraft:cardtable_base_light_gray
+- cataclysm:laser_gatling
+- securitycraft:deepslate_coal_mine
+- dedsafio3:amplificador_recipe
+- casinocraft:arcade_base_gray
+- dedsafio3:plantilladimensional
+- casinocraft:arcade_slot_magenta
+- cataclysm:wither_assault_shoulder_weapon
+- casinocraft:rulebook_7_0
+- casinocraft:cardtable_base_light_blue
+- cataclysm:bloom_stone_pauldrons
+- dedsafio3:borg_extractor_recipe
+- casinocraft:cardtable_wide_light_gray
+- immersive_paintings:glow_graffiti
+- cataclysm:ignitium_ingot
+- casinocraft:cardtable_wide_purple
+- securitycraft:copper_mine
+- cataclysm:black_steel_sword
+- casinocraft:cardtable_wide_lime
+- cataclysm:abyssal_sacrifice2
+- cataclysm:cursium_block
+- dedsafio3:nereida_extractor_recipe
+- casinocraft:arcade_base_magenta
+- dedsafio3:capsulavacia
+- securitycraft:gold_mine
+- casinocraft:arcade_slot_brown
+- casinocraft:arcade_slot_light_gray
+- cataclysm:ignitium_block
+- securitycraft:end_stone_mine
+- cataclysm:bulwark_of_the_flame
+- dedsafio3:dilitio_motor
+- dedsafio3:espadainanima
+- immersive_paintings:graffiti
+- dedsafio3:warden_alas_recie
+- securitycraft:deepslate_gold_mine
+- securitycraft:dirt_mine
+- securitycraft:suspicious_gravel_mine
+- securitycraft:deepslate_redstone_mine
+- securitycraft:coal_mine
+- securitycraft:smoker_mine
+- securitycraft:alarm
+- cataclysm:ancient_metal_ingot
+- dedsafio3:golden_steel_scrap
+- cataclysm:ancient_metal_block
+- dedsafio3:peto_i
+- immersive_paintings:painting
+- securitycraft:suspicious_sand_mine
+- securitycraft:panic_button
+- casinocraft:arcade_base_green
+- casinocraft:rulebook_6_2
+- casinocraft:rulebook_6_1
+- casinocraft:cardtable_base_red
+- casinocraft:cardtable_base_cyan
+- dedsafio3:pildoras
+- dedsafio3:nether_extractor_recipe
+- minecraft:gray_banner
+- casinocraft:arcade_slot_light_blue
+- cataclysm:monstrous_eye
+- casinocraft:cardtable_base_purple
+- cataclysm:black_steel_targe
+- casinocraft:arcade_base_black
+- securitycraft:blast_furnace_mine
+- ricksportalgun:golden_portal_gun
+- minecraft:dark_oak_sign
+- immersive_paintings:glow_painting
+- cataclysm:cursium_ingot
+- casinocraft:arcade_slot_gray
+- securitycraft:diamond_mine
+- securitycraft:stone_mine
+- securitycraft:redstone_mine
+- ricksportalgun:prime_portal_gun
+- dedsafio3:gema_nereida_recipe
+- casinocraft:arcade_base_brown
+- dedsafio3:casco_i
+- casinocraft:cardtable_wide_red
+- cataclysm:cursed_eye
+- casinocraft:cardtable_base_yellow
+- dedsafio3:soulgem
+- ricksportalgun:portal_gun
+- securitycraft:deepslate_mine
+- dedsafio3:energia_craft
+- cataclysm:sticky_gloves
+- cataclysm:mech_eye
+- casinocraft:arcade_base_orange
+- securitycraft:lapis_mine
+- minecraft:copper_block
+- cataclysm:ancient_metal_ingot_from_nuggets
+- casinocraft:rulebook_2_1
+- casinocraft:rulebook_2_2
+- casinocraft:cardtable_base_brown
+- casinocraft:arcade_base_purple
+- cataclysm:weapon_infusion/ignitium_elytra_chestplate
+- cataclysm:weapon_infusion/gauntlet_of_maelstrom
+- cataclysm:weapon_infusion/the_immolator
+- cataclysm:weapon_infusion/gauntlet_of_bulwark
+- cataclysm:weapon_infusion/void_forge
+- cataclysm:weapon_infusion/wrath_of_the_desert
+- cataclysm:weapon_infusion/void_assault_shoulder_weapon
+- dedsafio3:lingoteaureo
+- minecraft:ender_eye
+- cataclysm:void_scatter_arrow
+- casinocraft:cardtable_base_white
+- securitycraft:cobblestone_mine
+- casinocraft:cardtable_wide_white
+- casinocraft:cardtable_wide_gray
+- dedsafio3:metalcocido
+- cataclysm:black_steel_nugget_from_smelting
+- cataclysm:ancient_metal_nugget_from_smelting
+- cataclysm:smithing/cursium_boots
+- cataclysm:smithing/ignitium_helmet
+- securitycraft:claymore
+- securitycraft:ims
+- cataclysm:smithing/cursium_helmet
+- cataclysm:smithing/monstrous_helm
+- dedsafio3:pantalon_n
+- dedsafio3:ab_2
+- dedsafio3:botas_n
+- cataclysm:smithing/ignitium_boots
+- cataclysm:smithing/ignitium_chestplate
+- dedsafio3:peto_n
+- dedsafio3:al_2
+- cataclysm:smithing/cursium_leggings
+- cataclysm:smithing/cursium_chestplate
+- dedsafio3:ac_2
+- dedsafio3:a_2
+- dedsafio3:casco_n
+- cataclysm:smithing/ignitium_leggings
+- cataclysm:amethyst_bless/blessed_amethyst_crab_meat
