--- a/servidor_minecraft/plugins/Shopkeepers/data/save.yml
+++ b/servidor_minecraft/plugins/Shopkeepers/data/save.yml
@@ -1,3 +1,33 @@
 # This file is not intended to be manually modified! If you want to manually edit this file anyways, ensure that the server is not running currently and that you have prepared a backup of this file.
 
 data-version: 3|2|3465
+'2':
+  uniqueId: f1f6426b-1bfc-447e-95e5-76ac3d25deb7
+  world: DEDSAFIO 3 - By TheNeitorLoL
+  x: -600
+  y: 141
+  z: -286
+  yaw: 334.88977
+  type: admin
+  name: ''
+  object:
+    type: villager
+    baby: false
+    profession: NONE
+    villagerType: PLAINS
+    villagerLevel: 1
+  recipes:
+    '1':
+      resultItem:
+        ==: org.bukkit.inventory.ItemStack
+        v: 3465
+        type: VOLTYMOD_ESPADA_FANTASMAL
+      item1:
+        ==: org.bukkit.inventory.ItemStack
+        v: 3465
+        type: DEDSAFIO3_ESPADA_INANIMADA
+      item2:
+        ==: org.bukkit.inventory.ItemStack
+        v: 3465
+        type: VOLTYMOD_ALMA_GOLEM
+  snapshots: []
