--- a/servidor_minecraft/plugins/Shopkeepers/data/save.yml
+++ b/servidor_minecraft/plugins/Shopkeepers/data/save.yml
@@ -26,6 +26,7 @@ data-version: 3|2|3465
         ==: org.bukkit.inventory.ItemStack
         v: 3465
         type: VOLTYMOD_DEDITAAZUL
+        amount: 2
     '2':
       resultItem:
         ==: org.bukkit.inventory.ItemStack
