--- a/servidor_minecraft/plugins/ConditionalEvents/config.yml
+++ b/servidor_minecraft/plugins/ConditionalEvents/config.yml
@@ -130,3 +130,14 @@ Events:
       - 'cancel_event: true'
       - 'message: &7You said hello to nearby players!'
       - 'to_range: 10;false: message: &e%player% &7says you hello!'
+    enabled: false
+  event8:
+    type: interact
+    conditions:
+      - '%action% == RIGHT_CLICK_BLOCK' # Detecta clic derecho
+      - '%block% == minecraft:diamond_block' # Bloque objetivo (cambia a tu bloque)
+      - '%player_inventory_contains_item_named:Dedita Día 1%' # Verifica si el inventario contiene un ítem con nombre
+    actions:
+      default:
+        - 'execute: give %player% minecraft:diamond 5' # Recompensa (5 diamantes)
+        - 'execute: removeitem_named %player% Dedita Día 1' # Elimina el ítem con nombre "Special_Item"
