--- a/servidor_minecraft/plugins/ConditionalEvents/config.yml
+++ b/servidor_minecraft/plugins/ConditionalEvents/config.yml
@@ -137,13 +137,13 @@ Events:
     - '%block_x% == -543'
     - '%block_y% == 138'
     - '%block_z% == -269'
-    - '%block_world% == DEDSAFIO 3 - By'
-    - '%block% == VOLTYMOD:DIAMOND_BLOCK'
+    - '%block_world% == DEDSAFIO 3 - By TheNeitorLoL'
+    - '%block% == VOLTYMOD_PILAR_VERDE_GORDO'
     - '%action_type% == RIGHT_CLICK'
-    - '%item% == DIAMOND_SWORD'
-    - '%item_name% == Super Sword'
+    - '%item% == DEDSAFIO3_DEDITA_MISION'
+    - '%item_name% == Dedita Día 1'
     actions:
       default:
-      - 'message: &aYou''''ve received $500!'
-      - 'console_command: eco give %player% 500'
+      - 'message: OLA'
+      - 'console_command: say pr'
     enabled: true
