--- a/servidor_minecraft/plugins/ConditionalEvents/config.yml
+++ b/servidor_minecraft/plugins/ConditionalEvents/config.yml
@@ -144,6 +144,7 @@ Events:
     - '%item_name% == Dedita Día 1'
     actions:
       default:
-      - 'message: OLA'
-      - 'console_command: say pr'
+      - 'message: El jugador %player% Ha Completado la Mision Diaria'
+      - 'console_command: give %player% dedsafio3:dedita 5'
+      - 'console_command: clear %player% dedsafio3:dedita_mision'
     enabled: true
