--- a/servidor_minecraft/plugins/ConditionalEvents/config.yml
+++ b/servidor_minecraft/plugins/ConditionalEvents/config.yml
@@ -148,3 +148,16 @@ Events:
       - 'console_command: give %player% dedsafio3:dedita 5'
       - 'console_command: clear %player% dedsafio3:dedita_mision'
     enabled: true
+  event9:
+    type: block_interact
+    conditions:
+    - '%block_x% == -590'
+    - '%block_y% == 141'
+    - '%block_z% == -287'
+    - '%block_world% == DEDSAFIO 3 - By TheNeitorLoL'
+    - '%block% == VOLTYMOD_PILAR_MORADO'
+    - '%action_type% == RIGHT_CLICK'
+    actions:
+      default:
+      - 'console_command: shopkeeper open altar1 %player%'
+    enabled: true
