--- a/servidor_minecraft/plugins/ConditionalEvents/config.yml
+++ b/servidor_minecraft/plugins/ConditionalEvents/config.yml
@@ -144,7 +144,7 @@ Events:
     - '%item_name% == Dedita Día 1'
     actions:
       default:
-      - 'console_command: tellraw @a {"text":"⚙ El Jugador %player% Ha Completado la Mision Diaria","color":"dark_purple"}'
+      - 'console_command: tellraw @a {"text":"⚙ El Jugador %player% Ha Completado la Mision Diaria","color":"aqua"}'
       - 'console_command: give %player% dedsafio3:dedita 5'
       - 'console_command: clear %player% dedsafio3:dedita_mision'
     enabled: true
