--- a/servidor_minecraft/plugins/Shopkeepers/data/save.yml
+++ b/servidor_minecraft/plugins/Shopkeepers/data/save.yml
@@ -26,5 +26,5 @@ data-version: 3|2|3465
       item1:
         ==: org.bukkit.inventory.ItemStack
         v: 3465
-        type: VOLTYMOD_DEDITAAZUL
+        type: DEDSAFIO3_DEDITA
   snapshots: []
