--- a/servidor_minecraft/plugins/ConditionalEvents/config.yml
+++ b/servidor_minecraft/plugins/ConditionalEvents/config.yml
@@ -145,7 +145,7 @@ Events:
     actions:
       default:
       - 'console_command: tellraw @a {"text":"⚙ El Jugador %player% Ha Completado la Mision Diaria","color":"aqua"}'
-      - 'console_command: give %player% dedsafio3:dedita 5'
+      - 'console_command: give %player% voltymod:deditaazul 5'
       - 'console_command: clear %player% dedsafio3:dedita_mision'
     enabled: true
   event9:
