--- a/servidor_minecraft/plugins/SimplePortals/portals/montaña1.yml
+++ b/servidor_minecraft/plugins/SimplePortals/portals/montaña1.yml
@@ -1,7 +1,7 @@
 last-fill-material: AIR
 point-one: DEDSAFIO 3 - By TheNeitorLoL,-644.0,142.0,-258.0,0.0,0.0
 point-two: DEDSAFIO 3 - By TheNeitorLoL,-644.0,146.0,-255.0,0.0,0.0
-teleport-location: DEDSAFIO 3 - By TheNeitorLoL,-638.1727600755369,143.0,-256.023442181139,90.408966,0.30005836
+teleport-location: DEDSAFIO 3 - By TheNeitorLoL,-480.9982780377022,202.0,-241.55485787053036,-177.19221,1.799952
 commands-only: false
 commands: []
 disabled: false
