--- a/servidor_minecraft/plugins/Shopkeepers/data/save.yml
+++ b/servidor_minecraft/plugins/Shopkeepers/data/save.yml
@@ -139,4 +139,15 @@ data-version: 3|2|3465
         ==: org.bukkit.inventory.ItemStack
         v: 3465
         type: VOLTYMOD_DEDITAAZUL
+    '4':
+      resultItem:
+        ==: org.bukkit.inventory.ItemStack
+        v: 3465
+        type: VOLTYMOD_AMPLIFICADOR_ENERGIA
+        amount: 2
+      item1:
+        ==: org.bukkit.inventory.ItemStack
+        v: 3465
+        type: VOLTYMOD_DEDITANARANJA
+        amount: 3
   snapshots: []
